# mobiedantic

./: .gitignore  environment.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: publish.yml  test.yml
docs/: PLAN.md
sandbox/: Testing.ipynb
src/mobiedantic/: __init__.py  generated.py
tests/: test_api.py  test_mobie_dataset.py  test_schemas.py
