[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mobiedantic"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "BSD-3-Clause"
keywords = []
authors = [
  { name = "Jan Eglinger", email = "jan.eglinger@fmi.ch" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pydantic>=2.11.7,<3",
  "loguru>=0.7.3,<0.8",
]

[project.urls]
Documentation = "https://github.com/fmi-faim/mobiedantic#readme"
Issues = "https://github.com/fmi-faim/mobiedantic/issues"
Source = "https://github.com/fmi-faim/mobiedantic"

[tool.hatch.version]
source = "vcs"

[tool.coverage.run]
source_pkgs = ["mobiedantic", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
mobiedantic = ["src/mobiedantic", "*/mobiedantic/src/mobiedantic"]
tests = ["tests", "*/mobiedantic/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
show_missing = true

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "osx-64", "linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
mobiedantic = { path = ".", editable = true }

[tool.pixi.dependencies]
pydantic = ">=2.11.7,<3"
loguru = ">=0.7.3,<0.8"

[tool.pixi.feature.generate.dependencies]
datamodel-code-generator = ">=0.58.0,<0.59"
jupyter = ">=1.1.1,<2"
httpx = ">=0.28.1,<0.29"

[tool.pixi.feature.test.dependencies]
mobie_utils = ">=0.5.4,<0.6"
pytest = ">=8.4.1,<10"
pytest-cov = ">=6.2.1,<8"

[tool.pixi.feature.test.tasks]
test = "pytest --cov=src --cov-report term-missing"
cov-xml = "pytest --cov=src --cov-report xml"

[tool.pixi.feature.py310.dependencies]
python = ">=3.10,<3.11"

[tool.pixi.feature.py311.dependencies]
python = ">=3.11,<3.12"

[tool.pixi.feature.py312.dependencies]
python = ">=3.12,<3.13"

[tool.pixi.feature.py313.dependencies]
python = ">=3.13,<3.14"

[tool.pixi.feature.build.dependencies]
hatch = ">=1.16.5,<2"

[tool.pixi.feature.build.tasks]
build = "hatch build"

[tool.pixi.environments]
default = ["py310"]
py310 = ["py310", "test"]
py311 = ["py311", "test"]
py312 = ["py312", "test"]
py313 = ["py313", "test"]
generate = ["generate"]
build = { features = ["build"], no-default-feature = true }

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
ignore = ["N815", "UP006","UP007", "UP045", "I001", "T201", "PLC0206"]

[tool.ruff.format]
quote-style = "single"
